--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,20 +1,24 @@
-<%= form_for(@item) do |f| %>
-  <p>
+<%= form_for @item, url: items_path, html: { multipart: true } do |f| %>
+  <div class="form-group">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
-  </p>
-  <p>
+  </div>
+  <div class="form-group">
     <%= f.label :description %><br />
     <%= f.text_field :description %>
-  </p>
-  <p>
+  </div>
+  <div class="form-group">
     <%= f.label :category %><br />
     <%= f.select(:category, ['Fencing', 'Scaffolding',
                             'Powertools', 'Labour', 'Subcontractors', 'Ladders'], {:prompt => 'Select Category'}) %>
-  </p>
-  <p>
+  </div>
+  <div class="form-group">
+    <%= f.label :image %><br />
+    <%= f.file_field :image %>
+  </div>
+  <div class="form-group">
     <%= f.label :rate %><br />
     <%= f.number_field :rate %> (NZD per day)
-  </p>
+  </div>
   <%= f.submit "List Item" %>
 <% end %>
