--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,6 @@
 <div><%= image_tag @item.image.url(:medium) if @item.image? %></div>
 <h3><%= @item.title %></h3>
-<small><%= @item.category %></small>
+<small><%= @item.category.name %></small>
 <p><%= @item.description %></p>
 <p>$<%= @item.rate %> per day</p>
+<small>Owner: <%= @item.user.email %></small><br />
