--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -9,8 +9,7 @@
   </div>
   <div class="form-group">
     <%= f.label :category %><br />
-    <%= f.select(:category, ['Fencing', 'Scaffolding',
-                            'Powertools', 'Labour', 'Subcontractors', 'Ladders'], {:prompt => 'Select Category'}) %>
+    <%= f.select :category_id, options_for_select(Category.all.map{|c|[c.name, c.id]}) %>
   </div>
   <div class="form-group">
     <%= f.label :image %><br />
