--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,2 +1,6 @@
-<h2> List Equipment </h2>
-<%= render 'form' %>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <h2> List Equipment </h2>
+    <%= render 'form' %>
+  </div>
+</div>
