edited home copy

--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -20,12 +20,10 @@
       </div>
     </div>
     <p id="jumbotron-copy">
-      Dreamcatcher freegan kickstarter asymmetrical, photo booth etsy normcore church-key brunch.
-      Bicycle rights paleo dreamcatcher shoreditch neutra, cliche kickstarter. Gochujang chia cray,
-      food truck venmo tilde cred bushwick. Locavore hoodie aesthetic bicycle rights bespoke green
-      juice mustache ennui. Banjo iPhone lomo photo booth before they sold out, intelligentsia forage
-      YOLO waistcoat typewriter tilde. Venmo whatever distillery vice man braid. Green juice gastropub
-      vinyl craft beer cold-pressed sustainable.
+      HireShare (or probably some different name because that's a shitty name) is a peer-to-peer
+      equipment hiring market. HireShare enables owners to make easy money from idle
+      equipment when it isn't needed, whilst creating
+      an economical, flexible market for equipment hire. 
     </p>
   </div>
 </div>
