--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_field :description %>
   </div>
   <div class="form-group">
+    <%= f.label :specs %><br />
+    <%= f.text_field :specs %>
+  </div>
+  <div class="form-group">
     <%= f.label :category %><br />
     <%= f.select :category_id, options_for_select(Category.all.map{|c|[c.name, c.id]}) %>
   </div>
@@ -18,6 +22,10 @@
   <div class="form-group">
     <%= f.label :rate %><br />
     <%= f.number_field :rate %> (NZD per day)
+  </div>
+  <div class="form-group">
+    <%= f.label :location %><br />
+    <%= f.select :location_id, options_for_select(Location.all.map{|c|[c.name, c.id]}) %>
   </div>
   <%= f.submit "List Item" %>
 <% end %>
