--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -1,3 +1,4 @@
+
 <div class="row">
   <div class="jumbotron col-md-10 col-md-offset-1 home-banner">
     <%= image_tag("logo.jpg") %>
@@ -26,4 +27,8 @@
       an economical, flexible market for equipment hire.
     </p>
   </div>
+</div>
+
+<div class="row home-background">
+
 </div>
