--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,13 +1,20 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.header {
-  color: white;
+//header
+.custom-navbar {
+  height: 50px;
   background-color: black;
-  padding: 20px 10px 15px 10px;
-  a a:visited {
+  color: white;
+  a {
     color: white !important;
-    text-decoration: none;
+  }
+  a:visited {
+    color: white !important;
+  }
+  a:hover {
+    background-color: white;
+    color: black !important;
   }
 }
 
@@ -15,6 +22,7 @@
 //home
 
 .home-banner {
+  margin-top: 100px;
   background-image: url('gravel.jpg');
   background-size: cover;
   text-align: center;
@@ -33,11 +41,16 @@
 }
 
 //index
-
+.background-color {
+  background-color: black;
+}
 
 .categories-menu {
   padding: 15px;
   margin-left: 20px;
+  height: 100px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
 .index-item {
@@ -49,6 +62,10 @@
 }
 
 //show
+
+.show {
+  padding-top: 70px;
+}
 
 .description-specs {
   border: 1px solid;
