--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,88 +1,26 @@
-
-<!--
-  <div class="dropdown col-md-2 col-md-offset-5 categories-menu">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-      Categories
-      <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu col-md-3" aria-labelledby="dropdownMenu1">
-      <li><%= link_to "All", items_path %></li>
-      <li role="separator" class="divider"></li>
-      <% Category.all.each do |c| %>
-        <li><%= link_to c.name, items_path(category: c.name) %></li>
-      <% end %>
-    </ul>
-  </div>
+<div class="row background-color">
 
 
-<div class="row">
-  <% @items.each do |item| %>
-    <div class="col-md-8 col-md-offset-2 index-items">
-      <div class="col-md-3">
-        <div class="index-images"><%= image_tag item.image.url(:thumb, timestamp:false) if item.image? %></div>
-      </div>
-      <div class="col-md-3 col-md-offset-1 index-item-content">
-        <h3><%= link_to item.title, item %></h3>
-        (<%= item.category.name %>) <br />
-        <p>$<%= item.rate %> per day</p>
-      </div>
-    </div>
-  <% end %>
-</div>
-
--->
-
-<div class="row">
-    <div class="col-md-9">
-
-        <div class="row carousel-holder">
-
-            <div class="col-md-12">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                        </div>
-                        <div class="item">
-                            <img class="slide-image" src="http://placehold.it/800x300" alt="">
-                        </div>
-                    </div>
-                    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="dropdown categories-menu">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-              Categories
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu col-md-3" aria-labelledby="dropdownMenu1">
-              <li><%= link_to "All", items_path %></li>
-              <li role="separator" class="divider"></li>
-              <% Category.all.each do |c| %>
-                <li><%= link_to c.name, items_path(category: c.name) %></li>
-              <% end %>
-            </ul>
-          </div>
-        </div>
-
+  <div class="col-md-9">
     <div class="container">
         <div class="row">
+
+            <div class="col-md-12">
+              <div class="dropdown categories-menu">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Categories
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu col-md-3" aria-labelledby="dropdownMenu1">
+                  <li><%= link_to "All", items_path %></li>
+                  <li role="separator" class="divider"></li>
+                  <% Category.all.each do |c| %>
+                    <li><%= link_to c.name, items_path(category: c.name) %></li>
+                  <% end %>
+                </ul>
+              </div>
+            </div>
+
           <% @items.each do |item| %>
             <div class="col-sm-4 col-lg-4 col-md-4 thumb">
                 <div class="thumbnail index-item">
