--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,26 @@
-
-
-
-
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <%= link_to "Home", root_path, class: "navbar-brand" %>
-      <%= link_to "List Equipment", new_item_path, class: "navbar-brand" %>
-    </div>
-
-      <ul class="nav navbar-nav navbar-right">
-        <% if session[:user] == current_user %>
-          <li><%= link_to "Sign In", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <% else %>
-          <li><%= link_to "Sign Out", destroy_user_session_path, method: :get %></li>
-        <% end %>
+<section class="navbar navbar-fixed-top custom-navbar" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+				<span class="icon icon-bar"></span>
+			</button>
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", root_path %></li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+          <% if session[:user] == current_user %>
+            <li><%= link_to "Sign In", new_user_session_path, class: 'smoothScroll'%></li>
+            <li><%= link_to "Sign Up", new_user_registration_path, class: 'smoothScroll' %></li>
+          <% else %>
+            <li><%= link_to "Sign Out", destroy_user_session_path, method: :get, class: 'smoothScroll' %></li>
+          <% end %>
+        </ul>
+			</ul>
+		</div>
+	</div>
+</section>
