more styling, trees etc.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(https://fonts.googleapis.com/css?family=Ubuntu);
 
 //header
 .custom-navbar {
@@ -21,29 +22,34 @@
 
 //home
 
-.home-banner {
-  margin-top: 100px;
-  background-image: url('gravel.jpg');
-  background-size: cover;
-  text-align: center;
-  img {
-    width: 50%;
-    padding-bottom: 20px;
+.banner {
+ background-image: url('trees.jpeg');
+ background-size: cover;
+ color: white;
+ height: 650px;
+ margin-top: 50px;
+ font-family: 'Ubuntu', sans-serif;
+ text-align: center;
+ h1 {
+ }
+ img {
+   margin-top: 100px;
+   height: 50%;
+   width: 50%;
+   min-width: 260px;
+ }
+}
+
+.btn-custom {
+  a {
+    text-decoration: none;
+  }
+  a:visited {
+    text-decoration: none;
   }
 }
 
-#jumbotron-copy {
-  background-color: white;
-  width: 80%;
-  margin-left: 10%;
-  margin-top: 20px;
-  padding: 10px;
-}
-
 //index
-.background-color {
-  background-color: black;
-}
 
 .categories-menu {
   padding: 15px;
