--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,14 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import url(https://fonts.googleapis.com/css?family=Ubuntu);
-
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import 'https://fonts.googleapis.com/css?family=Bungee|Cairo';
 //header
 .custom-navbar {
   height: 50px;
   background-color: black;
   color: white;
+  font-family: 'Bungee', cursive;
   a {
     color: white !important;
   }
@@ -19,24 +21,21 @@
   }
 }
 
-
 //home
 
 .banner {
  background-image: url('trees.jpeg');
  background-size: cover;
  color: white;
- height: 650px;
- margin-top: 50px;
- font-family: 'Ubuntu', sans-serif;
+ height: 450px;
+ margin-top: 0px;
+ font-family: 'Bungee', cursive;
  text-align: center;
  h1 {
- }
- img {
-   margin-top: 100px;
-   height: 50%;
-   width: 50%;
-   min-width: 260px;
+   font-family: 'Bungee', cursive;
+   font-weight: bolder;
+   text-align: center;
+   padding-top: 200px;
  }
 }
 
@@ -49,7 +48,39 @@
   }
 }
 
+.service-desc {
+  margin-bottom: 20px;
+  h3 {
+    font-family: 'Bungee', cursive;
+    font-weight: 100px;
+  }
+  p {
+    font-family: 'Cairo', sans-serif;
+  }
+}
+
+.home-footer {
+   background-image: url('trees.jpeg');
+   background-size: cover;
+   height: 100px;
+   margin-top: 150px;
+}
+
+.btn-nav {
+  margin-top: 8px;
+}
+
+.btn-header {
+  background-color: black !important;
+  color: white !important;
+}
+
+
 //index
+
+.index-background {
+  background-color: #9C9C9C;
+}
 
 .categories-menu {
   padding: 15px;
@@ -65,6 +96,11 @@
 
 .index-image {
   min-height: 160px;
+}
+
+.thumbnail {
+  border-radius: 0px;
+
 }
 
 //show
