--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,5 @@
-<div class="row">
-
-
   <div class="col-md-9">
-    <div class="container">
+    <div class="container-fluid index-background">
         <div class="row">
 
             <div class="col-md-12">
