--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,11 +13,24 @@
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
+				<div class="btn-group btn-nav btn-header">
+					<button type="button" class="btn btn-default btn-header">Region</button>
+					<button type="button" class="btn btn-default dropdown-toggle btn-header" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<span class="caret btn-header"></span>
+						<span class="sr-only btn-header">Toggle Dropdown</span>
+					</button>
+					<ul class="dropdown-menu btn-header">
+						<% Location.all.each do |l| %>
+							<li><%= link_to l.name, items_path(category: l.name) %></li>
+						<% end %>
+					</ul>
+				</div>
           <% if session[:user] == current_user %>
             <li><%= link_to "Sign In", new_user_session_path, class: 'smoothScroll'%></li>
             <li><%= link_to "Sign Up", new_user_registration_path, class: 'smoothScroll' %></li>
           <% else %>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :get, class: 'smoothScroll' %></li>
+						<li><%= link_to "Your Account", root_path, method: :get, class: 'smoothScroll' %></li>
           <% end %>
         </ul>
 			</ul>
