added search bar and function + pagination for search results. Still can't deal with blank search.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,31 @@
   }
 }
 
+.home-search-bar {
+  text-align: center;
+  margin-top: 60px;
+  color: black;
+  a {
+    color: black !important;
+  }
+}
+
+.search-button {
+  margin-top: 5px;
+  padding: 5px;
+  width: 345px;
+  height: 35px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+}
+
+.search-field {
+  width: 345px;
+  height: 35px;
+  border-radius: 5px;
+}
+
 .service-desc {
   margin-bottom: 20px;
   h3 {
@@ -64,6 +89,11 @@
    background-size: cover;
    height: 100px;
    margin-top: 150px;
+}
+
+.home-footer-2 {
+   background-color: black;
+   height: 50px;
 }
 
 .btn-nav {
