green background on home for heroku version

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,8 @@
 //home
 
 .banner {
- background-image: url('trees.jpeg');
+ //background-image: url('trees.jpeg');
+ background-color: #769C7C;
  background-size: cover;
  color: white;
  height: 450px;
@@ -85,7 +86,8 @@
 }
 
 .home-footer {
-   background-image: url('trees.jpeg');
+   //background-image: url('trees.jpeg');
+   background-color: #769C7C;
    background-size: cover;
    height: 100px;
    margin-top: 150px;
