--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -37,8 +37,8 @@
 	<h3>Make money.</h3>
 	<p>
 		What's your most expensive piece of equipment which you haven't used
-		in more than a month? You wouldn't let an employee or contractor sit around
-		doing nothing for a month, so why let your equipment do it?
+		in more than a month? You wouldn't let an employee sit around
+		doing nothing for a month, so why  your equipment?
 	</p>
 </div>
 <!-- end service item -->
