--- a/app/views/items/search_results.html.erb
+++ b/app/views/items/search_results.html.erb
@@ -18,9 +18,11 @@
             </div>
           </div>
 
-        <% if @items.empty? %>
-          <%= link_to "...Nada. Try again?", root_path %>
-        <% end %>
+        <div class="nada">  
+          <% if @items.empty? %>
+            <%= link_to "...Nada. Try again?", root_path %>
+          <% end %>
+        </div>
         <% @items.each do |item| %>
           <div class="col-sm-4 col-lg-4 col-md-4 thumb">
               <div class="thumbnail index-item">
