temporarty fix for region dropdown

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -131,12 +131,13 @@
 }
 
 .items-container {
-h4 {
-  font-family: 'ubuntu';
-}
-p {
-  font-family: 'Cairo', courier, serif;
-}
+  padding-bottom: 7px;
+  h4 {
+    font-family: 'ubuntu';
+  }
+  p {
+    font-family: 'Cairo', courier, serif;
+  }
 }
 
 .index-item {
