--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -33,8 +33,9 @@
                 </div>
                 <div class="caption">
                     <h4 class="pull-right">$<%= item.rate %> per day</h4>
-                    <h4><%= link_to item.title, item %></h4>
-                    <p><%= truncate(item.specs, length: 30) %>
+                    <h4><%= link_to truncate(item.title, length: 25), item %></h4>
+                    <p><%= item.category.name %> | <%= item.location.name %></p>
+                    <p><%= truncate(item.specs, length: 40) %>
                 </div>
             </div>
           <% end %>
