styling stuff that I have forgotten

--- a/app/views/items/hire.html.erb
+++ b/app/views/items/hire.html.erb
@@ -1,1 +1,6 @@
-Placeholder page for hire function
+<div class="hire-placeholder">
+  <p>
+    [Placeholder page for hire function]
+    Get in touch with ...
+  </p>
+</div>
