added basic order functionality

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -23,6 +23,14 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+  <div class="field">
+    <%= f.label :start_date %><br>
+    <%= f.date_select(:start_date, :order => [:month, :day, :year]) %>
+  </div>
+  <div class="field">
+    <%= f.label :end_date %><br>
+    <%= f.date_select(:end_date, :order => [:month, :day, :year]) %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
