--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'bootstrap-datetimepicker.css';
 @import 'jquery-ui/core.css';
 @import 'jquery-ui/datepicker.css';
 @import 'jquery-ui/theme.css';
