--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-8 col-md-offset-2">
     <div class="show-image"><%= image_tag @item.image.url(:medium, timestamp:false) if @item.image? %></div>
     <div><h2><%= @item.title %></div></h2>
-    <p><%= @item.category.name + " | " + @item.location.name %></p>
+    <p> placeholder </p>
     <div><p><%= @item.description %></p></div>
     <div><p><%= @item.specs %></p></div>
     <p>$<%= @item.rate %> per day</p>
