added maps4rails gem and configured. Added map with location in item show (yet to be styled)

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,6 +6,28 @@
     <div><p><%= @item.description %></p></div>
     <div><p><%= @item.specs %></p></div>
     <p>$<%= @item.rate %> per day</p>
+    <div style='width: 800px;'>
+      <div id="map" style='width: 800px; height: 400px;'></div>
+    </div>
     <div class="btn btn-default hire-button"><%= link_to "Hire now", new_item_order_path(@item) %></div>
   </div>
 </div>
+<script>
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+  markers = handler.addMarkers([
+    {
+      "lat": <%= @item.latitude %>,
+      "lng": <%= @item.longitude %>,
+      "picture": {
+        "url": "http://people.mozilla.com/~faaborg/files/shiretoko/firefoxIcon/firefox-32.png",
+        "width":  32,
+        "height": 32
+      },
+      "infowindow": "hello!"
+    }
+  ]);
+  handler.bounds.extendWith(markers);
+  handler.fitMapToBounds();
+});
+</script>
