added testing for maps and cannot create item without logging in scenario

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,8 @@
       <!-- start of dropdown -->
       <div class="col-md-12 col-md-offset-1">
         <div class="dropdown categories-menu">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Categories
             <span class="caret"></span>
           </button>
