added category and location scopes to Item model. Used scope for category browse on index

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,16 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :address %><br>
+    <%= f.label :address %> (of site)<br>
     <%= f.text_field :address %>
   </div>
   <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.label :use%> (What are you using the equipment for?)<br>
+    <%= f.text_field :use %>
   </div>
   <div class="field">
     <%= f.label :start_date %><br>
