--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -22,9 +22,9 @@
       <!-- end of dropdown -->
       <!-- start of items -->
       <div class="nada col-md-offset-1">
-        <% if @items.empty? %>
+        <!-- <% if @items.empty? %>
           <h4><%= link_to "...Nada. Try again?", root_path %></h4>
-        <% end %>
+        <% end %> -->
       </div>
       <div class="items-container col-md-12 col-md-offset-1">
         <% @items.each do |item| %>
