--- a/app/views/items/search_results.html.erb
+++ b/app/views/items/search_results.html.erb
@@ -21,9 +21,7 @@
           </div>
 
         <div class="nada">
-          <% if @items.empty? %>
-            <%= link_to "...Nada. Try again?", root_path %>
-          <% end %>
+
         </div>
         <% @items.each do |item| %>
           <div class="col-sm-4 col-lg-4 col-md-4 thumb">
@@ -41,5 +39,5 @@
         <% end %>
       </div>
   </div>
-  <%= will_paginate @items %>
+  <div class="page col-md-offset-1"><%= will_paginate @items %></div>
 </div>
