Added, then removed acts_as_tree on Category

--- a/app/views/items/search_results.html.erb
+++ b/app/views/items/search_results.html.erb
@@ -32,7 +32,7 @@
                   <div class="caption">
                       <h4 class="pull-right">$<%= item.rate %> per day</h4>
                       <h4><%= link_to item.title, item %></h4>
-                      <p><%= item.location.name %> | <%= item.category.name %></p>
+                      <p>Placeholder</p>
                       <p><%= truncate(item.specs, length: 30) %>
                   </div>
               </div>
