--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,16 +9,9 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right">
 				<div class="btn-group btn-nav btn-header">
-					<button type="button" class="btn btn-default btn-header">Region</button>
-					<button type="button" class="btn btn-default dropdown-toggle btn-header" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<span class="caret btn-header"></span>
-						<span class="sr-only btn-header">Toggle Dropdown</span>
+					<button type="button" class="btn btn-default btn-header">
+						<%= link_to "List Equipment", new_item_path %>
 					</button>
-					<ul class="dropdown-menu btn-header">
-						<% Location.all.each do |l| %>
-							<li><%= link_to l.name, root_path %></li>
-						<% end %>
-					</ul>
 				</div>
           <% if session[:user] == current_user %>
             <li><%= link_to "Sign In", new_user_session_path, class: 'smoothScroll'%></li>
